# cppserdes

./: .gitignore  .travis.yml  01_simple_example_8cpp-example.html  02_bitcpy_usage_8cpp-example.html  03_serial_usage_8cpp-example.html  04_object_oriented_serial_8cpp-example.html  05_nested_object_oriented_serial_8cpp-example.html  06_variable_length_formats_8cpp-example.html  07_delimited_arrays_8cpp-example.html  08_error_handling_8cpp-example.html  09_runtime_edittable_formats_8cpp-example.html  10_virtual_fields_8cpp-example.html  11_using_atomics_with_bitcpy_8cpp-example.html  12_compile_time_bitcpy_evaluation_8cpp-example.html  13_arrays_of_packets_8cpp-example.html  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  bitcpy_8h.html  bitcpy_8h_source.html  bitcpy__common_8h.html  bitcpy__common_8h.js  bitcpy__common_8h_source.html  bitcpy__from__array_8h.html  bitcpy__from__array_8h.js  bitcpy__from__array_8h_source.html  bitcpy__sized__pointer_8h.html  bitcpy__sized__pointer_8h_source.html  bitcpy__to__array_8h.html  bitcpy__to__array_8h.js  bitcpy__to__array_8h_source.html  bitliterals_8h.html  bitliterals_8h.js  bitliterals_8h_source.html  bitprint_8h.html  bitprint_8h.js  bitprint_8h_source.html  (+75 more)
examples/: 01_simple_example.cpp  02_bitcpy_usage.cpp  03_serial_usage.cpp  04_object_oriented_serial.cpp  05_nested_object_oriented_serial.cpp  06_variable_length_formats.cpp  07_delimited_arrays.cpp  08_error_handling.cpp  09_runtime_edittable_formats.cpp  10_virtual_fields.cpp  11_using_atomics_with_bitcpy.cpp  13_arrays_of_packets.cpp  (+2 more)
(+79 files in other folders)
